--- a/apps/account/templates/account/password_change/email.message.html
+++ b/apps/account/templates/account/password_change/email.message.html
@@ -136,7 +136,7 @@
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: bold; margin: 0; Margin-bottom: 15px;">
                                             We wanted to inform you that the security settings on your
-                                            DecWorks account have been updated.
+                                            DevWorks account have been updated.
 
 
 
@@ -164,11 +164,11 @@
                                             </tbody>
                                         </table>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                           No action is required on your part. Please continue using DecWorks.
+                                           No action is required on your part. Please continue using DevWorks.
                                         </p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
                                             Sincerely,
-                                            The DecWorks Team
+                                            The DevWorks Team
                                         </p>
                                     </td>
                                 </tr>
