--- a/apps/account/templates/account/activation/email.message.html
+++ b/apps/account/templates/account/activation/email.message.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Activate your DecWorks Account</title>
+    <title>Activate your DevWorks Account</title>
     <style>
         /* -------------------------------------
             INLINED WITH htmlemail.io/inline
@@ -121,7 +121,7 @@
                 <!-- START CENTERED WHITE CONTAINER -->
                 <span class="preheader"
                       style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">
-                Activate your DecWorks Account
+                Activate your DevWorks Account
             </span>
                 <table class="main"
                        style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 3px;">
@@ -135,7 +135,7 @@
                                 <tr>
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: bold; margin: 0; Margin-bottom: 15px;">
-                                            Welcome to DecWorks
+                                            Welcome to DevWorks
                                         </p>
                                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary"
                                                style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
@@ -166,7 +166,7 @@
                                         </p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
                                             Sincerely,
-                                            The DecWorks Team
+                                            The DevWorks Team
                                         </p>
                                     </td>
                                 </tr>
