--- a/apps/account/templates/account/delete/form.html
+++ b/apps/account/templates/account/delete/form.html
@@ -35,7 +35,7 @@
 
 		<label class="my-2">
 			<input type="checkbox" name="disclaimer_resume_steps"/>
-			Account deletion is permanent. If I need to use DecWorks again, I must create a new account.
+			Account deletion is permanent. If I need to use DevWorks again, I must create a new account.
 		</label>
 
 		<button
