--- a/apps/account/templates/account/delete/mail.message.html
+++ b/apps/account/templates/account/delete/mail.message.html
@@ -135,7 +135,7 @@
                                 <tr>
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: bold; margin: 0; Margin-bottom: 15px;">
-                                            Your DecWorks Account has been deleted.
+                                            Your DevWorks Account has been deleted.
                                         </p>
                                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary"
                                                style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
@@ -148,7 +148,7 @@
                                                         <tbody>
                                                         <tr>
                                                             <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #3498db; border-radius: 5px; text-align: center;">
-                                                                Thank you for using DecWorks
+                                                                Thank you for using DevWorks
                                                             </td>
                                                         </tr>
                                                         </tbody>
@@ -162,7 +162,7 @@
                                         </p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
                                             Sincerely,
-                                            The DecWorks Team
+                                            The DevWorks Team
                                         </p>
                                     </td>
                                 </tr>
