--- a/apps/account/templates/account/email_password_change/email.message.html
+++ b/apps/account/templates/account/email_password_change/email.message.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-    To initiate the password reset process for your {{ user.email }} DecWorks Account,
+    To initiate the password reset process for your {{ user.email }} DevWorks Account,
     click the link below:
 
     {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
@@ -8,5 +8,5 @@
     window instead.
 
     Sincerely,
-    The DecWorks Team
+    The DevWorks Team
 {% endautoescape %}
